# KokkosMPIConnector

./: CMakeLists.txt  README.md
modules/: FindMDSPAN.cmake
src/: connector.hpp  helpers.hpp
test/: CMakeLists.txt  main.cpp
